# theo-pools

./: .gitignore  README.md
app/: next.config.mjs  package-lock.json  package.json  vercel.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/dashboard/: page.tsx
app/app/pool/[id]/: PoolDetailClient.tsx  page.tsx
app/components/: Countdown.tsx  JoinModal.tsx  Navbar.tsx  PoolCard.tsx  StakePosition.tsx  WalletButton.tsx  WalletProviderWrapper.tsx
app/lib/: constants.ts  idl.json  instructions.ts  mockData.ts  types.ts
bot/: package-lock.json  package.json  setup_bot.sh
bot/src/: index.ts
bot/src/bot/: commands.ts  keyboards.ts
bot/src/chain/: client.ts  pools.ts  transactions.ts
program/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
program/programs/theo-commitment-pool/: Cargo.toml
program/programs/theo-commitment-pool/src/: events.rs  lib.rs  state.rs
program/programs/theo-commitment-pool/src/instructions/: claim.rs  close_stalled_pool.rs  collect_redistribution.rs  create_pool.rs  deposit.rs  early_exit.rs  finalize.rs  initialize.rs  mod.rs  sweep_empty_vault.rs  withdraw.rs
program/programs/theo-commitment-pool/src/instructions/backup/: claim.rs  collect_redistribution.rs  create_pool.rs  deposit.rs  early_exit.rs  finalize.rs  initialize.rs  mod.rs  withdraw.rs
program/tests/: close_and_withdraw.ts  concurrent-pools.ts  create_pool.ts  init_testnet.ts  theo-commitment-pool.ts
