[workspace]
members = ["programs/*"]
resolver = "2"

# -----------------------------
# Release build settings
# -----------------------------
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# -----------------------------
# Workspace dependency locks
# -----------------------------
[workspace.dependencies]
anchor-lang = "=0.32.1"
anchor-spl  = "=0.32.1"

solana-program = "~2.1"
solana-sdk     = "~2.1"
solana-instruction = "~2.1"


