[package]
name = "theo-commitment-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "theo_commitment_pool"

[features]
default = []
test-fast = []
testnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = ["token_2022"] }

# You only need this if you truly must pin it for your toolchain.
# If you don't need it, remove it. If something pulls 0.4.x, keep this pinned.
constant_time_eq = "=0.3.1"
